Fixed Spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ body {
     align-items: center;
 
     .main__section {
+        letter-spacing: .1rem;
         background-color: $dark-blue;
         color: white;
         height: 400px;
@@ -44,8 +45,8 @@ body {
 
             p {
                 color: $medium-grey;
-                margin: 15px 0;
-                font-size: 1.05rem;
+                margin: 10px 0 0 0;
+                font-size: 1rem;
             }
         }
 
@@ -54,12 +55,13 @@ body {
             height: 60px;
             display: flex;
             align-items: center;
-            justify-content: space-around;
+            justify-content: space-between;
+            margin-top: -10px;
 
             a {
                 button{
-                    width: 45px;
-                    height: 45px;
+                    width: 50px;
+                    height: 50px;
                     border-radius: 50%;
                     border: none;
                     background-color: $dark-blue-two;
